--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -183,8 +183,8 @@ ui bootstrap tweaks
 
 //custom-------------------------------------------------------------------------
 .bg-dark {
-  background-color: #3b5998 !important;
+ // background-color: #3b5998 !important;
 }
 .alert-warning{
-  background-color: #80d8ff;
+  //background-color: #80d8ff;
 }
